Re-committing SVGs, which haven't changed at all Correctly centers hover state for footer social icons (which had been off-center) Hid 'Latest News' section header on smallest screen sizes Created increased faux padding around text in big circle feature on homepage Messed up original implementation of showing/hiding 'Latest News' section header. It's fixed here. Sped up underline hover on homepage lead tease Simplified implementation of faux padding on HP big circle tease. Now works cross-browser and no text gets cut off. Thanks for the push, @signal-intrustion!

--- a/static/scss/components/_tease-list-latest.scss
+++ b/static/scss/components/_tease-list-latest.scss
@@ -8,9 +8,11 @@
 
 .hp-list-hdr {
   @extend %section-hdr;
-  font-size: 14px;
+  display: none;
+  font-size: 16px;
   margin-bottom: 2em;
-  @include mq($bp-medium) {
+  @include mq($bp-zone-has-layout) {
+    display: inline-block;
     font-size: 17px;
   }
 }
